<resources>
    <string name="app_name">Arogya</string>

    <!--Firebase, API Key etc-->
    <string name="firebase_app_id">1:432620095786:android:0f1bda5cc1e1068978f653</string>
    <string name="firebase_api_key">AIzaSyBIyZGLDCPqgb99Q4LUJmlkhmpmAvLlh0w</string>

    <!--SignUp Activity-->
    <string name="tv_welcome_arogya">Welcome to Arogya</string>
    <string name="tv_register_with_arogya">Register with Arogya</string>
    <string name="edt_full_name">Full name</string>
    <string name="edt_nic_number">NIC/Passport number</string>
    <string name="edt_mobile_number">Mobile number</string>
    <string name="edt_divisional_secretariat">Divisional secretariat</string>
    <string name="edt_grama_niladhari_division">Grama Niladhari division</string>
    <string name="btn_register">Register</string>
    <string name="tv_already_registered">Already registered?</string>
    <string name="tv_login">Login</string>
    <string name="tv_password">Password</string>
    <string name="tv_confirm_password">Confirm Password</string>

    <!--Login Activity-->
    <string name="tv_not_registered_yet">Not registered yet?</string>
    <string name="tv_register">Register</string>
    <string name="btn_login">Login</string>

    <!--Main Activity-->
    <string name="personal_information">Personal Information</string>
    <string name="disease_trends">Disease Trends</string>

    <!--Ask User Information Activity-->
    <string name="edit">Edit</string>
    <string name="submit_user_info">Submit</string>

    <!--User Register Activity-->
    <string name="tv_you_have_not_registered_any_users">You have not registered any users</string>

    <!--Messages & Warnings-->
    <string name="msg_register_failed">Register Failed</string>
    <string name="msg_user_already_exists">User Already Exists</string>
    <string name="msg_register_success">Register Success</string>
    <string name="msg_login_failed">Login Failed</string>
    <string name="msg_login_success">Login Success</string>
    <string name="msg_submit_success">Submit Success</string>

    <!--Preference FileUtils Ids-->
    <string name="id_uid">id_uid</string>
    <string name="id_full_name">id_full_name</string>
    <string name="id_dob">id_dob</string>
    <string name="id_gender">id_gender</string>
    <string name="id_marital_status">id_marital_status</string>
    <string name="id_primary_contact">id_primary_contact</string>
    <string name="id_secondary_contact_1">id_secondary_contact_1</string>
    <string name="id_secondary_contact_2">id_secondary_contact_2</string>
    <string name="id_emergency_contact">id_emergency_contact</string>
    <string name="id_emergency_contact_relation">id_emergency_contact_relation</string>
    <string name="id_address_line_1">id_address_line_1</string>
    <string name="id_address_line_2">id_address_line_2</string>
    <string name="id_address_line_3">id_address_line_3</string>
    <string name="id_address_line_4">id_address_line_4</string>
    <string name="id_district">id_district</string>
    <string name="id_ds">id_ds</string>
    <string name="id_gn">id_gn</string>
    <string name="id_current_health_status">id_current_health_status</string>
    <string name="id_contact_trace">id_contact_trace</string>

    <!--Contact Trace Activity-->
    <string name="push_notification">Contact Tracer: Someone you interacted with changed their health status to </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
