<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".signup.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/linear_layout_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".activity.SignUpActivity">

            <LinearLayout
                android:id="@+id/view_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_welcome_arogya"
                    android:textColor="@color/welcomeAboardTextColor"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_register_with_arogya"
                    android:textColor="@color/lightBlue"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <!--edt_full_name-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edt_full_name_txt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/ic_user">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                            android:hint="@string/edt_full_name"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--edt_nic_number-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edt_nicpp_txt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/ic_id_card">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_nicpp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edt_nic_number"
                            android:inputType="text"
                            android:maxLength="12"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--edt_mobile_number-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edt_primary_contact_txt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/ic_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_primary_contact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edt_mobile_number"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--tv_password-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edt_password_txt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="5dp"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/ic_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tv_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--tv_confirm_password-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edt_confirm_password_txt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/ic_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tv_confirm_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rect_blue"
                    android:gravity="center"
                    android:text="@string/btn_register"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_already_registered"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_link_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/tv_login"
                    android:textColor="@color/lightBlue"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/lightBlue"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>